--- a/task3/index.html
+++ b/task3/index.html
@@ -24,9 +24,11 @@
         <div>
             <label><b>Gender:</b></label>
             <br>
-            male:<input type="radio" name="Gender">
+            <label for="male">male</label>
+            <input id="male" type="radio" name="Gender">
             <br>
-            female:<input type="radio" name="Gender">
+            <label for="female">female</label>
+            <input id="female" type="radio" name="Gender">
         </div>
         <div>
             <label><b>phone number:</b></label>
