--- a/task4/content.html
+++ b/task4/content.html
@@ -23,7 +23,7 @@
     <hr>
     <h2 id="about">about</h2>
     <p>lorem ipsum dolorvcn bbsm asmbasg hjhkn rahjknls hgjkn dgfxfmb </p>
-    <video width="400" height="400" outoplay controls >
+    <video width="400" height="400" outoplay controls poster="1000147161.jpg">
         <source src="WhatsApp Video 2023-10-29 at 10.25.47_3f5ea4f2.mp4" type="video/mp4">
         <source src="WhatsApp Video 2023-10-29 at 10.25.47_3f5ea4f2.ogg" type="video/ogg">
           your browser does not support
@@ -80,6 +80,7 @@
         
         
     </table>
+    <hr>
     <h3>lessons</h3>
     <ol>
         <li>Anchor</li>
